<resources>
    <string name="app_name">course_mag</string>
    <string name="icon_sale">Sale</string>
    <string name="contacts_text">Контакты</string>
    <string name="about_text">Про нас</string>
    <string name="main_text">Главная</string>
    <string name="logo_text1">Courses</string>
    <string name="logo_text2">App</string>
    <string name="course_level">Уровень</string>
    <string name="course_date">Старт обучения</string>
    <string name="course_dsc">Программа обучения Джава – рассчитана
на новичков в данной сфере.

За программу вы изучите построение
графических приложений под ПК,
разработку веб сайтов на основе Java
Spring Boot, изучите построение
полноценных Андроид приложений
и отлично изучите сам язык Джава!</string>

</resources>